Created 'Register' form along with required field validation

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -17,3 +17,15 @@
 @keyframes app-logo-spin {
     from { transform: scaleX(-1); }
 }
+
+.dispNone {
+    display: none;
+}
+
+.dispBlock {
+    display: block;
+}
+
+.red {
+    color: red;
+}
