Added grid list for 'Released Movies' on home page

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -17,6 +17,42 @@
 }
 
 .movie-poster {
-    height: 100%;
+    height: 130%;
     width: auto;
+}
+
+.flex-container {
+    display: flex;
+}
+
+.flex-container>div {
+    margin: 16px;
+}
+
+.left {
+    width: 76%;
+}
+
+.right {
+    padding-top: 20px;
+    width: 24%;
+}
+
+.released-movie-grid-item {
+    margin: 15px;
+}
+
+@media (max-width: 992px) {
+    .flex-container {
+        flex-direction: column;
+    }
+    .left {
+        width: 100%;
+    }
+    .right {
+        width: 90%;
+    }
+    .released-movie-grid-item {
+        margin: 8px;
+    }
 }
